--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,24 @@
-node_modules
-coverage
-.nyc_output
-dist
-lib
-docs
+# Logs
+logs
 *.log
-stats.html
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-.idea/
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-!.vscode/settings.json
-
-.coveralls.yml
-packages/examples-react/build
-
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
