--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@jsonforms/vue-vanilla",
-  "version": "3.2.1",
-  "description": "Vue 3 Vanilla renderers for JSON Forms",
-  "repository": "https://github.com/eclipsesource/jsonforms",
-  "bugs": "https://github.com/eclipsesource/jsonforms/issues",
+  "name": "jsonforms-vue-primevue",
+  "private": true,
+  "version": "0.0.0",
+  "description": "Vue 3 PrimeVue renderers for JSON Forms",
+  "repository": "https://github.com/cesardddp/jsonforms-vue-primevue/",
+  "bugs": "https://github.com/cesardddp/jsonforms-vue-primevue/issues",
   "homepage": "http://jsonforms.io/",
   "license": "MIT",
   "publishConfig": {
@@ -30,66 +31,53 @@
     "css",
     "tailwind"
   ],
-  "main": "lib/jsonforms-vue-vanilla.cjs.js",
-  "module": "lib/jsonforms-vue-vanilla.esm.js",
-  "types": "lib/src/index.d.ts",
+  "type": "module",
   "files": [
-    "lib/*",
-    "src/*",
-    "vanilla.css"
+    "dist"
   ],
+  "main": "./dist/jsonforms-vue-primevue.umd.cjs",
+  "module": "./dist/jsonforms-vue-primevue.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/jsonforms-vue-primevue.es.js",
+      "require": "./dist/jsonforms-vue-primevue.umd.ts"
+    },
+    "./dist/style.scss": "./dist/style.scss"
+  },
   "scripts": {
-    "serve": "vue-cli-service serve dev/serve.ts",
-    "build": "cross-env NODE_ENV=production rollup --config rollup.config.js",
-    "build:examples-app": "rollup -c rollup.example.config.js",
-    "clean": "rimraf lib example/dist",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "doc": "typedoc --name 'JSON Forms Vue Vanilla Renderers' --out docs src",
-    "test": "vue-cli-service test:unit"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "@jsonforms/core": "^3.2.1",
+    "@jsonforms/vue": "^3.2.1",
+    "@vee-validate/i18n": "^4.12.6",
+    "@vee-validate/rules": "^4.12.6",
+    "@vueuse/core": "^9.13.0",
+    "ajv": "^8.6.1",
+    "core-js": "^3.9.1",
+    "cpf-cnpj-validator": "^1.0.3",
+    "dot-object": "^2.1.4",
+    "lodash": "^4.17.21",
+    "maska": "^2.1.11",
+    "object-path": "^0.11.8",
+    "password-validator": "^5.3.0",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.50.0",
+    "v-mask": "^2.3.0",
+    "vee-validate": "^4.12.6",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vue": "^3.2.26",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-typescript": "^7.9.0",
-    "@types/chai": "^4.2.11",
-    "@types/jest": "^27.4.1",
-    "@types/mocha": "^5.2.4",
-    "@types/node": "^18.19.4",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "@vue/cli-plugin-babel": "~4.5.19",
-    "@vue/cli-plugin-typescript": "~4.5.19",
-    "@vue/cli-plugin-unit-mocha": "~4.5.19",
-    "@vue/cli-service": "~4.5.19",
-    "@vue/compiler-sfc": "^3.2.26",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.0.2",
-    "chai": "^4.1.2",
-    "cross-env": "^7.0.2",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier-vue": "^4.2.0",
-    "eslint-plugin-vue": "^9.9.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.78.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-cleanup": "^3.2.1",
-    "rollup-plugin-typescript2": "^0.34.1",
-    "rollup-plugin-visualizer": "^5.4.1",
-    "rollup-plugin-vue": "^6.0.0",
-    "symlink-dir": "^5.0.0",
-    "tslib": "^2.5.0",
-    "typedoc": "~0.25.3",
-    "typescript": "~4.9.5",
-    "vue": "^3.2.26",
-    "vue-jest": "^5.0.0-0"
+    "@types/lodash": "^4.17.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0",
+    "vue-tsc": "^2.0.6"
   },
   "peerDependencies": {
     "@jsonforms/core": "^3.2.1",
