--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     },
     "lib": ["esnext", "dom"]
   },
-  "include": ["src", "components", "alias", "*.d.ts"]
+  "include": ["src", "components", "alias", "*.d.ts", "src/main.ts"]
 }
